# el-be-back

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  README.org  build.sh  el-be-back.el  flake.nix  plan.md
bench/: ebb-bench.el  run-bench.sh
etc/: ebb.bash  ebb.fish  ebb.zsh
etc/shell-integration/bash/: ebb-inject.bash
etc/shell-integration/fish/vendor_conf.d/: ebb-integration.fish
etc/shell-integration/zsh/: .zshenv
src/: config.rs  input.rs  lib.rs  render.rs
test/: ebb-test.el
