[package]
name = "ebb-module"
version = "0.1.0"
edition = "2021"
description = "Emacs terminal emulator built on wezterm-term"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
emacs = "0.20"
anyhow = "1"

# wezterm terminal emulation engine (git dep -- not published on crates.io)
wezterm-term = { git = "https://github.com/wez/wezterm", branch = "main" }
termwiz = { git = "https://github.com/wez/wezterm", branch = "main" }
wezterm-cell = { git = "https://github.com/wez/wezterm", branch = "main", features = ["std"] }
wezterm-surface = { git = "https://github.com/wez/wezterm", branch = "main", features = ["std"] }
wezterm-escape-parser = { git = "https://github.com/wez/wezterm", branch = "main", features = ["std"] }

[profile.release]
opt-level = 3
lto = "thin"
